# az-python

./: .install-all  Dockerfile  MANIFEST.in  README.md  azure-pipelines.yml  fsi-risk-requirements.txt  piptools.txt  pyproject.toml  requirements.in  requirements.linked.in  requirements.txt  setup.py  virtualenv.txt
.depends/: audio.speech.requirements.txt  cdm.cdm.requirements.txt  en.ca.requirements.txt  en.km.requirements.txt  fsi.nlp.requirements.txt  fsi.risk.requirements.txt  gem.ent.requirements.txt  gem.reco.requirements.txt  maro.maro.requirements.txt  msft.reco.requirements.txt  msft.utils.requirements.txt  re.fclib.requirements.txt  re.retail.requirements.txt  requirements.txt  sc.ecr.requirements.txt  sc.ip.requirements.txt  sc.ro.requirements.txt  test.requirements.txt
.depricated/: en.ca.requirements.txt  fsi.nlp.requirements.txt  gem.ent.requirements.txt  sc.ip.requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  container-update.yml  container_update.yml  docker-lint.yml  docker-publish.yml  draft-release.yml  github-container.yml  pypi-test-publish.yml  pypi.yml  update-version.yml
.pipelines/infra/: en.km.yml
ai-python/: temp.in
ai-python/energy/: ca.requirements.txt  km.requirements.txt
ai-python/fsi/: nlp.requirements.txt
ai-python/gem/: ent.requirements.txt  reco.requirements.txt
ai-python/log/: ro.requirements.txt
ai-python/maro/: maro.requirements.txt
ai-python/msft/: ama.requirements.txt  reco.requirements.txt  utils.requirements.txt
ai-python/retail/: fclib.requirements.txt  retail.requirements.txt
ai-python/sc/: ecr.requirements.txt  ip.requirements.txt  ro.requirements.txt
src/az-python/: __init__.py
test/: requirements.in  requirements.txt
