[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "azpy"
authors = [{name = "Daniel Ciborowski", email = "dciborow@microsoft.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/microsoft/az-python"

[project.optional-dependencies]
spark = [
    "pyspark>=3.0.0"
]
test = [
    "bandit[toml]==1.7.4",
    "black==22.1.0",
    "check-manifest==0.48",
    "flake8-bugbear==22.1.11",
    "flake8-docstrings",
    "flake8-formatter_junit_xml",
    "flake8==4.0.1",
    "pre-commit==2.17.0",
    "pylint==2.12.2",
    "pylint_junit",
    "pytest-cov==3.0.0",
    "pytest-mock<3.7.1",
    "pytest-runner",
    "pytest==7.1.0",
    "pytest-github-actions-annotate-failures",
    "shellcheck-py==0.8.0.4"
]

[tool.black]
line-length = 120
fast = true
